ULC frontend example

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "npx spago build",
     "build-prod": "spago -x spago.production.dhall build --purs-args \"-o output-prod -g sourcemaps --json-errors\"",
     "bundle": "npm run build-prod && purs-backend-es bundle-app --main Main --minify --no-build --to dist/index.js",
-    "serve": "npm run build && esbuild index.js --bundle --outdir=dist --servedir=dist --watch",
+    "serve": "npm run build && esbuild index.js --bundle --outdir=dist --servedir=dist",
     "test": "npx spago test"
   },
   "repository": {
