--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build-prod": "spago -x spago.production.dhall build --purs-args \"-o output-prod -g sourcemaps --json-errors\"",
     "bundle": "npm run build-prod && purs-backend-es bundle-app --main Main --minify --no-build --to dist/index.js",
     "serve": "npm run build && esbuild index.js --sourcemap --bundle --outdir=dist --servedir=dist",
+    "servek": "npm run serve",
     "test": "npx spago test"
   },
   "repository": {
