--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "esbuild": "^0.17.18",
     "purescript": "^0.15.8",
     "purs-backend-es": "^1.3.2",
-    "spago": "^0.20.9"
+    "spago": "^0.20.9",
+    "util": "^0.12.5"
   },
   "scripts": {
     "postinstall": "spago install",
