--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bundle": "npm run build-prod && purs-backend-es bundle-app --main Main --minify --no-build --to dist/index.js",
     "serve": "npm run build && esbuild index.js --sourcemap --bundle --outdir=dist --servedir=dist",
     "servek": "npm run serve",
-    "test": "npx spago test"
+    "test": "npx spago test",
+    "build-standalone": "npx esbuild index.js --bundle --outfile=dist/index.js\n"
   },
   "repository": {
     "type": "git",
