--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build-tutorial": "npx esbuild tutorial.js --bundle --outfile=dist/pantograph.js\n",
     "build-standalone": "npx esbuild standalone.js --bundle --outfile=dist/pantograph.js\n",
     "test": "npx spago test",
-    "serve": "npm run build && esbuild index.js --sourcemap --bundle --outdir=dist --servedir=dist"
+    "serve": "npm run build && esbuild index.js --sourcemap --bundle --outfile=dist/pantograph.js --servedir=dist"
   },
   "repository": {
     "type": "git",
